Added elements on html and styles

--- a/index.html
+++ b/index.html
@@ -7,7 +7,21 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Hola Mundo</h1>
+    <div id="headerUGB">
+        <img id="logoUGBimg" src="images/logoUGBclear.jpg">
+        <h1>Universidad Gerardo Barrios</h1>
+        <ul id="listadoHeader">
+            <li><strong>Codigo de Estudiante:</strong> SMSS065523</li>
+            <li><strong>Carrera:</strong> Ingenieria en Redes y Sistemas</li>
+        </ul>
+    </div>
+
+    <div id="footerUGB">
+        <ul>
+            <li>Oscar Rene Palacios Franco</li>
+            <li>Examen Parcial - Primer Computo</li>
+        </ul>
+    </div>
     <script src="scripts.js"></script>
 </body>
 </html>
