Testing Custom Elements

--- a/index.html
+++ b/index.html
@@ -7,16 +7,48 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="headerUGB">
-        <img id="logoUGBimg" src="images/logoUGBclear.jpg">
-        <h1>Universidad Gerardo Barrios</h1>
-        <ul id="listadoHeader">
-            <li><strong>Codigo de Estudiante:</strong> SMSS065523</li>
-            <li><strong>Carrera:</strong> Ingenieria en Redes y Sistemas</li>
-        </ul>
+<custom-header> </custom-header>
+    <!--Aca finaliza el header-->
+
+    <div class="MainDiv">
+        <div class="leftMainDiv">
+            <img src="images/logos.png">
+        </div>
+        <div class="rightMainDiv">
+            <div>
+                <h1>Bienvenido a mi sitio Web!!</h1>
+            </div>
+            <div>
+                <p>Todo sobre HTML, CSS y JavaScript, bloque 1 Programación IV UGB</p>
+            </div>
+        </div>
     </div>
 
-    <div id="footerUGB">
+
+    <div class="sectionRight">
+        <div>
+        <img src="images/htmlIMage.png"> 
+        </div>
+        <div>
+            <h1>HTML</h1>
+            <p>Muchas veces considerado como lenguaje de programación, mas bien, este es un lenguaje para maqueteado de paginas web, lo que nos sirve para etc etc</p>
+        </div>
+    </div>
+
+    <div class="sectionRight">
+            <div>
+            <h1>CSS</h1>
+            <p>Todo lo relacionado con los estilos y con los diseños de nuestra página web</p>
+        </div>
+        <div>
+        <img src="images/htmlIMage.png"> 
+        </div>
+
+    </div>
+
+
+    <!--Aca comienza el footer-->
+    <div id="footerUGB" onclick="Test()">
         <ul>
             <li>Oscar Rene Palacios Franco</li>
             <li>Examen Parcial - Primer Computo</li>
