Added more responsive elements

--- a/index.html
+++ b/index.html
@@ -16,35 +16,52 @@
         </div>
         <div class="rightMainDiv">
             <div>
-                <h1>Bienvenido a mi sitio Web!!</h1>
+                <h1>Bienvenido a mi sitio Web!</h1>
             </div>
             <div>
-                <p>Todo sobre HTML, CSS y JavaScript, bloque 1 Programación IV UGB</p>
+                <p>Todo sobre HTML, CSS y JavaScript. Resumen de lo aprendido en el Bloque 1 Programación IV UGB 2025</p>
             </div>
         </div>
     </div>
 
+<!--Acá incia el div de las barras horizontales-->
+<div id="CuerpoDiv">
 
     <div class="sectionRight">
         <div>
         <img src="images/htmlIMage.png"> 
         </div>
-        <div>
+        <div style="min-width: 105px;">
             <h1>HTML</h1>
-            <p>Muchas veces considerado como lenguaje de programación, mas bien, este es un lenguaje para maqueteado de paginas web, lo que nos sirve para etc etc</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis cumque quae architecto hic soluta necessitatibus a adipisci, eum alias excepturi, cum praesentium nam, dolore laboriosam voluptatum. Reprehenderit, vero maiores! Praesentium!</p>
         </div>
+    </div>
+
+    <div class="sectionLeft">
+            <div style="text-align: end; min-width: 105px;">
+            <h1>CSS</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt maiores ratione itaque quod. Eius voluptas cum ex beatae! Cum dolorum omnis fuga sapiente libero labore sed quas in quidem rerum?</p>
+        </div>
+        <div>
+        <img src="images/css.jpg"> 
+        </div>
+
     </div>
 
     <div class="sectionRight">
-            <div>
-            <h1>CSS</h1>
-            <p>Todo lo relacionado con los estilos y con los diseños de nuestra página web</p>
-        </div>
         <div>
-        <img src="images/htmlIMage.png"> 
+        <img src="images/jsImage.png"> 
         </div>
-
+        <div style="min-width: 105px;">
+            <h1>JavaScript</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis cumque quae architecto hic soluta necessitatibus a adipisci, eum alias excepturi, cum praesentium nam, dolore laboriosam voluptatum. Reprehenderit, vero maiores! Praesentium!</p>
+        </div>
     </div>
+
+</div>
+<!--Este div cierra las barras horizontales-->
+
+
 
 
     <!--Aca comienza el footer-->
