Changed Elements and Theme

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 
     <div class="MainDiv">
         <div class="leftMainDiv">
-            <img src="images/logos.png">
+            <img src="images/dengue.webp">
         </div>
         <div class="rightMainDiv">
             <div>
-                <h1>Bienvenido a mi sitio Web!</h1>
+                <h1>Signos de <strong>alarma</strong> de el dengue</h1>
             </div>
             <div>
-                <p>Todo sobre HTML, CSS y JavaScript. Resumen de lo aprendido en el Bloque 1 Programación IV UGB 2025</p>
+                <p><em>Para mayor información hacer click en cada imagen respectivamente</em></p>
             </div>
         </div>
     </div>
@@ -29,34 +29,41 @@
 
     <div class="sectionRight">
         <div>
-        <img src="images/htmlIMage.png"> 
+        <img src="images/DolorAbdomen.png"> 
         </div>
         <div style="min-width: 105px;">
-            <h1>HTML</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis cumque quae architecto hic soluta necessitatibus a adipisci, eum alias excepturi, cum praesentium nam, dolore laboriosam voluptatum. Reprehenderit, vero maiores! Praesentium!</p>
+            <h1>Dolor intenso en el abdomen</h1>
         </div>
     </div>
 
     <div class="sectionLeft">
             <div style="text-align: end; min-width: 105px;">
-            <h1>CSS</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt maiores ratione itaque quod. Eius voluptas cum ex beatae! Cum dolorum omnis fuga sapiente libero labore sed quas in quidem rerum?</p>
+            <h1 style="text-align: left;">Vómitos persistentes</h1>
         </div>
         <div>
-        <img src="images/css.jpg"> 
+        <img src="images/Vomitos.png"> 
         </div>
 
     </div>
 
     <div class="sectionRight">
         <div>
-        <img src="images/jsImage.png"> 
+        <img src="images/SANGRADO-DE-NARIZ.jpg"> 
         </div>
         <div style="min-width: 105px;">
-            <h1>JavaScript</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis cumque quae architecto hic soluta necessitatibus a adipisci, eum alias excepturi, cum praesentium nam, dolore laboriosam voluptatum. Reprehenderit, vero maiores! Praesentium!</p>
+            <h1>Sangrado</h1>
         </div>
     </div>
+
+    <div class="sectionLeft">
+        <div style="text-align: end; min-width: 105px;">
+        <h1>Cansancio o inquietud extremos</h1>
+    </div>
+    <div>
+    <img src="images/images.jpeg"> 
+    </div>
+
+</div>
 
 </div>
 <!--Este div cierra las barras horizontales-->
@@ -66,10 +73,11 @@
 
     <!--Aca comienza el footer-->
     <div id="footerUGB" onclick="Test()">
-        <ul>
-            <li>Oscar Rene Palacios Franco</li>
+        <ul><marquee>
+            <li>Oscar René Palacios Franco</li>
+            <li>Gerson Manasés Flores Quinteros</li>
             <li>Examen Parcial - Primer Computo</li>
-        </ul>
+        </ul></marquee>
     </div>
     <script src="scripts.js"></script>
 </body>
